# my_base_html_lib

./: README.md  changelog.md  pyproject.toml  requirements.txt  setup.py
my_base_html_lib/: __init__.py  my_base_document.py
tests/: test_file.py
tests/test_output/: test_file.html
